Add method to get station ids
