# src/skg_manager/api/router/generic_routers/db_manager_router.py
@@ -1,6 +1,7 @@
 from colorama import Fore
 from neo4j.exceptions import ServiceUnavailable
 
+from .. import extract_list_of_route_data
 from ....generic.service_interfaces.db_manager_interface import DatabaseManagerInterface
 from ..interface_routers.db_manager_router_interface import DatabaseManagerRouterInterface
 from ..router_result import Result
@@ -115,6 +116,22 @@ class DatabaseManagerRouter(DatabaseManagerRouterInterface):
 
     def get_model_ids(self):
         return self.db_manager.get_model_ids()
+
+    def on_get_station_ids(self, route_data=None) -> Result:
+        station_types = extract_list_of_route_data(route_data=route_data, key="station_types", default=None)
+        print(f"station_types: {station_types}")
+        try:
+            station_ids = self.get_station_ids(station_types)
+            if station_ids is None:
+                station_ids = []
+
+            return Result(status=Result.Status.SUCCESS, message="Successfully requested model ids",
+                          data=station_ids)
+        except Exception as e:
+            return Result(status=Result.Status.FAILURE, message=str(e))
+
+    def get_station_ids(self, station_types=None):
+        return self.db_manager.get_station_ids(station_types)
 
     def on_test_connection(self) -> Result:
         try:
